--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.kevinlay.androidfundamentalspractice">
 
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,7 +21,16 @@
             </intent-filter>
         </activity>
         <activity android:name=".Structure.StructureMainActivity" />
-        <activity android:name=".Structure.ScreenRotationActivity"></activity>
+        <activity android:name=".Structure.ScreenRotationActivity" />
+        <activity android:name=".Structure.PermissionsActivity" />
+        <activity android:name=".ViewsAndLayouts.ViewsAndLayoutsActivity" />
+        <activity android:name=".ViewsAndLayouts.TextViewActivity" />
+        <activity android:name=".ViewsAndLayouts.EditTextActivity" />
+        <activity android:name=".ViewsAndLayouts.ImageViewActivity" />
+        <activity android:name=".ViewsAndLayouts.InputViewActivity" />
+        <activity android:name=".DesigningAndStylingViews.DesigningAndStylingViewActivity" />
+        <activity android:name=".DesigningAndStylingViews.AnimationActivity" />
+        <activity android:name=".DesigningAndStylingViews.DrawableActivity"></activity>
     </application>
 
 </manifest>
