-Added Styles and Themes Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         <activity android:name=".DesigningAndStylingViews.AnimationActivity" />
         <activity android:name=".DesigningAndStylingViews.DrawableActivity" />
         <activity android:name=".AdapterViews.AdapterViewActivity" />
-        <activity android:name=".DesigningAndStylingViews.StylesAndThemesActivity" />
+        <activity android:name=".DesigningAndStylingViews.StylesAndThemesActivity" android:theme="@style/AppThemeCustom" />
         <activity android:name=".AdapterViews.RecyclerViewActivity" />
         <activity android:name=".AdapterViews.CardViewActivity"></activity>
     </application>
