--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -41,7 +43,12 @@
         <activity android:name=".DataPersistence.SharedPreferencesActivity" />
         <activity android:name=".DataPersistence.InternalStorageActivity" />
         <activity android:name=".DataPersistence.ExternalStorageActivity" />
-        <activity android:name=".DataPersistence.SqliteDatabaseActivity"></activity>
+        <activity android:name=".DataPersistence.SqliteDatabaseActivity" />
+        <activity android:name=".Fragments.FragmentsActvity" />
+        <activity android:name=".Fragments.CreatingFragmentsActivity" />
+        <activity android:name=".Fragments.ViewPagerActvity" />
+        <activity android:name=".Fragments.DialogFragmentActivity" />
+        <activity android:name=".Fragments.FlexibleUIActivity"></activity>
     </application>
 
 </manifest>
