--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name=".dagger.MyApp">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -75,7 +76,8 @@
         <activity android:name=".NetworkAndModels.RetrofitActivity" />
         <activity android:name=".DataPersistence.ContentProviderActivity" />
         <activity android:name=".DesigningAndStylingViews.CustomFont.CustomFontActivity" />
-        <activity android:name=".databinding.BindingActivity"></activity>
+        <activity android:name=".databinding.BindingActivity" />
+        <activity android:name=".dagger.Dagger2Activity"></activity>
     </application>
 
 </manifest>
