--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,13 @@
     <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE" />
 
     <application
+        android:name=".dagger.MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name=".dagger.MyApp">
+        android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -77,7 +77,8 @@
         <activity android:name=".DataPersistence.ContentProviderActivity" />
         <activity android:name=".DesigningAndStylingViews.CustomFont.CustomFontActivity" />
         <activity android:name=".databinding.BindingActivity" />
-        <activity android:name=".dagger.Dagger2Activity"></activity>
+        <activity android:name=".dagger.Dagger2Activity" />
+        <activity android:name=".kotlin.KotlinActivity"></activity>
     </application>
 
 </manifest>
